--- a/Resources/views/form_js.html.twig
+++ b/Resources/views/form_js.html.twig
@@ -1,10 +1,10 @@
 {% block form_js %}
-{% spaceless %}
+{% apply spaceless %}
     {% for child in form %}
         {{ form_js(child) }}
     {% endfor %}
     {% block form_js_prototype %}{% endblock form_js_prototype %}
-{% endspaceless %}
+{% endapply %}
 {% endblock form_js %}
 
 {% block field_js "" %}
@@ -12,9 +12,9 @@
 {% block button_js "" %}
 
 {% block collection_js %}
-{% spaceless %}
+{% apply spaceless %}
 	{% for child in form %}
 	    {{ form_js(child) }}
 	{% endfor %}
-{% endspaceless %}
+{% endapply %}
 {% endblock collection_js %}
